fixed responsiveness for this stackoverflow clone

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,7 +5,15 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
+/* Hide scrollbars for all elements */
+*::-webkit-scrollbar {
+  display: none;
+}
 
+* {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
 @layer base {
   :root {
     --background: 0 0% 100%;
